--- a/docs/themes/sd/layouts/_partials/header.html
+++ b/docs/themes/sd/layouts/_partials/header.html
@@ -1,2 +1,3 @@
-<h1>{{ site.Title }}</h1>
-{{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+<div class="header">
+  <h1><a href="/">{{ site.Title }}</a></h1>
+</div>
