--- a/docs/themes/sd/layouts/home.html
+++ b/docs/themes/sd/layouts/home.html
@@ -1,7 +1,11 @@
 {{ define "main" }}
+<div class="content">
+  <h1>{{ .Title }}</h1>
   {{ .Content }}
-  {{ range site.RegularPages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
+  <div class="links">
+    {{ range site.RegularPages }}
+    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+    {{ end }}
+  </div>
+</div>
 {{ end }}
