--- a/docs/themes/sd/layouts/_partials/head/js.html
+++ b/docs/themes/sd/layouts/_partials/head/js.html
@@ -1,4 +1,4 @@
-{{- with resources.Get "js/main.js" }}
+<!-- {{- with resources.Get "js/main.js" }}
   {{- $opts := dict
     "minify" (not hugo.IsDevelopment)
     "sourceMap" (cond hugo.IsDevelopment "external" "")
@@ -13,4 +13,4 @@
       {{- end }}
     {{- end }}
   {{- end }}
-{{- end }}
+{{- end }} -->
