--- a/docs/themes/sd/layouts/baseof.html
+++ b/docs/themes/sd/layouts/baseof.html
@@ -3,7 +3,7 @@
 <head>
   {{ partial "head.html" . }}
 </head>
-<body>
+<body{{ if .IsHome }} class="home-page"{{ end }}>
   <header>
     {{ partial "header.html" . }}
   </header>
