--- a/docs/themes/sd/layouts/_partials/head/css.html
+++ b/docs/themes/sd/layouts/_partials/head/css.html
@@ -1,9 +1,2 @@
-{{- with resources.Get "css/main.css" }}
-  {{- if hugo.IsDevelopment }}
-    <link rel="stylesheet" href="{{ .RelPermalink }}">
-  {{- else }}
-    {{- with . | minify | fingerprint }}
-      <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
-    {{- end }}
-  {{- end }}
-{{- end }}
+{{ $mainCSS := resources.Get "css/main.css" }}
+<link rel="stylesheet" href="{{ $mainCSS.RelPermalink }}">
