--- a/docs/themes/sd/layouts/_partials/head/js.html
+++ b/docs/themes/sd/layouts/_partials/head/js.html
@@ -1,16 +1,2 @@
-<!-- {{- with resources.Get "js/main.js" }}
-  {{- $opts := dict
-    "minify" (not hugo.IsDevelopment)
-    "sourceMap" (cond hugo.IsDevelopment "external" "")
-    "targetPath" "js/main.js"
-  }}
-  {{- with . | js.Build $opts }}
-    {{- if hugo.IsDevelopment }}
-      <script src="{{ .RelPermalink }}"></script>
-    {{- else }}
-      {{- with . | fingerprint }}
-        <script src="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous"></script>
-      {{- end }}
-    {{- end }}
-  {{- end }}
-{{- end }} -->
+{{ $backToTop := resources.Get "js/back-to-top.js" }}
+<script src="{{ $backToTop.RelPermalink }}"></script>
